# quickstep

./: .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  Doxyfile  NOTICE  README-WINDOW_AGGREGATION.md  README.md  WORKING_WITH_AN_IDE.md  cyclic_dependency.py  empty_src.cpp  validate_cmakelists.py
catalog/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  Catalog.proto  CatalogAttribute.cpp  CatalogAttribute.hpp  CatalogConfig.h.in  CatalogDatabase.cpp  CatalogDatabase.hpp  CatalogDatabaseCache.cpp  CatalogDatabaseCache.hpp  CatalogDatabaseLite.hpp  CatalogErrors.hpp  CatalogModule.hpp  CatalogRelation.cpp  CatalogRelation.hpp  CatalogRelationSchema.cpp  CatalogRelationSchema.hpp  CatalogRelationStatistics.cpp  CatalogRelationStatistics.hpp  CatalogTypedefs.hpp  GenerateInitialDefaultCatalog.cpp  IndexScheme.cpp  IndexScheme.hpp  NUMAPlacementScheme.cpp  NUMAPlacementScheme.hpp  PartitionScheme.cpp  PartitionScheme.hpp  PartitionScheme.proto  PartitionSchemeHeader.cpp  PartitionSchemeHeader.hpp
cli/: CMakeLists.txt  CliConfig.h.in  CliModule.hpp  CommandExecutor.cpp  CommandExecutor.hpp  ConductorDistributed.cpp  DefaultsConfigurator.hpp  DropRelation.cpp  DropRelation.hpp  InputParserUtil.cpp  InputParserUtil.hpp  LineReader.cpp  LineReader.hpp  LineReaderDumb.cpp  LineReaderDumb.hpp  LineReaderLineNoise.cpp  LineReaderLineNoise.hpp  PrintToScreen.cpp  PrintToScreen.hpp  QuickstepCli.cpp  QuickstepCliDistributed.cpp  WorkerDistributed.cpp
cmake/: FindGSasl.cmake  FindKerberos.cmake  FindLibNuma.cmake  FindLibhdfs3.cmake
compression/: CMakeLists.txt  CompressionDictionary.cpp  CompressionDictionary.hpp  CompressionDictionaryBuilder.cpp  CompressionDictionaryBuilder.hpp  CompressionDictionaryLite.cpp  CompressionDictionaryLite.hpp  CompressionModule.hpp
expressions/: CMakeLists.txt  ExpressionFactories.cpp  ExpressionFactories.hpp  Expressions.proto  ExpressionsModule.hpp
parser/: CMakeLists.txt  ParseAssignment.hpp  ParseAttributeDefinition.cpp  ParseAttributeDefinition.hpp  ParseBasicExpressions.cpp  ParseBasicExpressions.hpp  ParseBlockProperties.cpp  ParseBlockProperties.hpp  ParseCaseExpressions.cpp  ParseCaseExpressions.hpp  ParseExpression.hpp  ParseGeneratorTableReference.cpp  ParseGeneratorTableReference.hpp  ParseGroupBy.cpp  ParseGroupBy.hpp  ParseHaving.cpp  ParseHaving.hpp  ParseIndexProperties.cpp  ParseIndexProperties.hpp  ParseJoinedTableReference.cpp  ParseJoinedTableReference.hpp  ParseKeyValue.hpp  ParseLimit.cpp  ParseLimit.hpp  ParseLiteralValue.cpp  ParseLiteralValue.hpp  ParseOrderBy.cpp  ParseOrderBy.hpp  ParsePartitionClause.hpp  ParsePredicate.cpp  ParsePredicate.hpp  ParsePredicateExists.hpp  ParsePredicateInTableQuery.hpp  ParseSample.cpp  ParseSample.hpp  ParseSelect.hpp  ParseSelectionClause.cpp  ParseSelectionClause.hpp  ParseSimpleTableReference.cpp  ParseSimpleTableReference.hpp  (+18 more)
query_execution/: AdmitRequestMessage.hpp  BlockLocator.cpp  BlockLocator.hpp  CMakeLists.txt  Foreman.cpp  Foreman.hpp  ForemanDistributed.cpp  ForemanDistributed.hpp  ForemanLite.hpp  PolicyEnforcer.cpp  PolicyEnforcer.hpp  QueryContext.cpp  QueryContext.hpp  QueryContext.proto  QueryExecutionMessages.proto  QueryExecutionModule.hpp  QueryExecutionState.hpp  QueryExecutionTypedefs.hpp  QueryExecutionUtil.hpp  QueryManager.cpp  QueryManager.hpp  Shiftboss.cpp  Shiftboss.hpp  ShiftbossDirectory.hpp  StreamCoordinatorThread.cpp  StreamCoordinatorThread.hpp  WorkOrderProtosContainer.hpp  WorkOrdersContainer.cpp  WorkOrdersContainer.hpp  Worker.cpp  Worker.hpp  WorkerDirectory.hpp  WorkerMessage.hpp  WorkerSelectionPolicy.hpp
query_optimizer/: CMakeLists.txt  ExecutionGenerator.cpp  ExecutionGenerator.hpp  ExecutionHeuristics.cpp  ExecutionHeuristics.hpp  LogicalGenerator.cpp  LogicalGenerator.hpp  LogicalToPhysicalMapper.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerContext.cpp  OptimizerContext.hpp  OptimizerTree.hpp  PhysicalGenerator.cpp  PhysicalGenerator.hpp  QueryHandle.hpp  QueryOptimizerConfig.h.in  QueryOptimizerModule.hpp  QueryPlan.hpp  QueryProcessor.cpp  QueryProcessor.hpp  Validator.hpp
relational_operators/: AggregationOperator.cpp  AggregationOperator.hpp  BuildHashOperator.cpp  BuildHashOperator.hpp  CMakeLists.txt  CreateIndexOperator.cpp  CreateIndexOperator.hpp  CreateTableOperator.cpp  CreateTableOperator.hpp  DeleteOperator.cpp  DeleteOperator.hpp  DestroyHashOperator.cpp  DestroyHashOperator.hpp  DropTableOperator.cpp  DropTableOperator.hpp  FinalizeAggregationOperator.cpp  FinalizeAggregationOperator.hpp  GenerateNumRowsStatsOperator.cpp  GenerateNumRowsStatsOperator.hpp  HashJoinOperator.cpp  HashJoinOperator.hpp  InsertOperator.cpp  InsertOperator.hpp  MonitoredTextScanOperator.cpp  MonitoredTextScanOperator.hpp  NestedLoopsJoinOperator.cpp  NestedLoopsJoinOperator.hpp  PrintToScreenOperator.hpp  RebuildWorkOrder.hpp  RelationalOperator.hpp  RelationalOperatorsModule.hpp  SampleOperator.cpp  SampleOperator.hpp  SaveBlocksOperator.cpp  SaveBlocksOperator.hpp  SelectOperator.cpp  SelectOperator.hpp  SortMergeRunOperator.cpp  (+19 more)
transaction/: AccessMode.cpp  AccessMode.hpp  CMakeLists.txt  CycleDetector.cpp  CycleDetector.hpp  DeadLockDetector.cpp  DeadLockDetector.hpp  DeadLockThread.cpp  DeadLockThread.hpp  DirectedGraph.cpp  DirectedGraph.hpp  Lock.cpp  Lock.hpp  LockManager.cpp  LockManager.hpp  LockManagerThread.cpp  LockManagerThread.hpp  LockRequest.cpp  LockRequest.hpp  LockTable.cpp  LockTable.hpp  ResourceId.cpp  ResourceId.hpp  StronglyConnectedComponents.cpp  StronglyConnectedComponents.hpp  Transaction.cpp  Transaction.hpp  TransactionManager.cpp  TransactionManager.hpp  TransactionModule.hpp  TransactionTable.cpp  TransactionTable.hpp
transaction/tests/: AccessMode_unittest.cpp  CycleDetector_unittest.cpp  DeadLockDetector_unittest.cpp  DeadLockThread_unittest.cpp  DirectedGraph_unittest.cpp  LockManagerThread_unittest.cpp  LockManager_unittest.cpp  LockRequest_unittest.cpp  LockTable_unittest.cpp  Lock_unittest.cpp  ResourceId_unittest.cpp  StronglyConnectedComponents_unittest.cpp  TransactionTable_unittest.cpp
types/: Type.cpp  (+42 more)
(+693 files in other folders)
